@@ -1,5 +1,5 @@
 name    = Config-Model
-version = 1.204
+version = 1.205
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
